tests/codegen/fail/interface/struct/derive_missing_transitive_impl.stderr
error[E0080]: evaluation of constant value failed
  --> fail/interface/struct/derive_missing_transitive_impl.rs:10:36
   |
10 | #[graphql(impl = Node1Value, for = Node3Value)]
   |                                    ^^^^^^^^^^ the evaluated program panicked at 'Failed to implement interface `Node2` on `Node3`: missing `impl = ` for transitive interface `Node1` on `Node3`.', $DIR/fail/interface/struct/derive_missing_transitive_impl.rs:10:36
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` (in Nightly builds, run with -Z macro-backtrace for more info)
